# smart-rs

./: Cargo.toml
src/: ata.rs  error.rs  lib.rs  nvme.rs
src/examples/: identify_bus.rs  read_smart.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
